--- a/index.html
+++ b/index.html
@@ -4,64 +4,58 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>台中景點推薦</title>
-
-	<style>
-		td{text-align: center}
-
-		.font1{font-size: 36px;}
-		.font2{font-size: 28px;}
-		.font2:hover{ font-size: 32px; background-color: black; color: white}
-		.font3{font-size: 20px;}
-		.font3:hover{ font-size: 24px; background-color: black; color: white}
-
-		.container{margin: 0 auto;width: 1024px;}
-
-		.round_img1{border-radius: 50px;}
-		.round_img1:hover{opacity: 80%}
-		.round_img2{border-radius: 50%;width: 300px;height: 300px}
-		.round_img2:hover{opacity: 80%;rotate:-5deg;}
-
-		td{padding:20px;}
-
-		.navbar {
-			overflow: hidden;
-			background-color: #333;
-			position: fixed; /* Set the navbar to fixed position */
-			top: 0; /* Position the navbar at the top of the page */
-			width: 100%; /* Full width */
-			}
-
-		.navbar a {
-			float: left;
-			display: block;
-			color: #f2f2f2;
-			text-align: center;
-			padding: 14px 16px;
-			text-decoration: none;
-			font-size: 17px
-			}
-
-		.navbar a:hover {
-  			background: #ddd;
- 			color: black;
-			}
-
-	</style>
+	<link rel="stylesheet" href="TaichungTravel.css">
 </head>
 <body>
 	<div class="navbar">
-  		<a href="#t1">臺中市</a>
-	  	<a href="#t2">台中國家歌劇院</a>
-	  	<a href="#t3">臺中州廳</a>
-	  	<a href="#t4">審計新村</a>
+		<a href="index.html">首頁</a>
+
+		<div class="dropdown">
+			<a class="dropbtn">自然景觀 ▾</a>
+			<div class="dropdown-content">
+				<a href="自然景觀/大坑步道.html">大坑步道</a>
+				<a href="自然景觀/武陵農場.html">武陵農場</a>
+				<a href="自然景觀/高美濕地.html">高美濕地</a>
+			</div>
+		</div>
+
+		<div class="dropdown">
+			<a class="dropbtn">人文文化 ▾</a>
+			<div class="dropdown-content">
+				<a href="人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="人文文化/霧峰林家花園.html">霧峰林家花園</a>
+			</div>
+		</div>
+
+		<div class="dropdown">
+			<a class="dropbtn">親子旅遊 ▾</a>
+			<div class="dropdown-content">
+				<a href="親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="親子旅遊/麗寶樂園.html">麗寶樂園</a>
+			</div>
+		</div>
+
+		<div class="dropdown">
+			<a class="dropbtn">美食商圈 ▾</a>
+			<div class="dropdown-content">
+				<a href="美食商圈/一中商圈.html">一中商圈</a>
+				<a href="美食商圈/審計新村.html">審計新村</a>
+				<a href="美食商圈/第二市場.html">第二市場</a>
+				<a href="美食商圈/逢甲夜市.html">逢甲夜市</a>
+				<a href="美食商圈/草悟道.html">草悟道</a>
+			</div>
+		</div>
 	</div>
+
 
 	<table class="container" border="0">
 		<tr>
 			<td colspan="2">
 				<br><br>
-				<font class="font1">台中市景點推薦</font><br>
-				<img id="t1" class="round_img1" src='00taichung.jpeg' width="1024px" height="300px">
+				<a href="https://www.taichung.gov.tw/" target="_blank">
+					<img id="t1" class="round_img1" src='img/00taichung.jpeg' width="1024px" height="300px">
+				</a>
 			</td>
 		</tr>
 		<tr>
@@ -72,25 +66,31 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='01.jpeg'>
+				<a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/942" target="_blank">
+					<img id="t2" class="round_img2" src='img/01.jpeg'>
+				</a>
 			</td>
 			<td>
 				<div class="font3">台中國家歌劇院</div>
 				台中國家歌劇院位於台中市西屯區，是極具特色的大型公有展演空間，由日本建築師伊東豊雄設計，以人類最原始的「洞窟」、「地穴」的概念設計成世界獨一無二的美聲涵洞曲牆建築，歷時五年時間完成、耗資43.6億元，終在2014年11月23日落成啟用，內部規劃有大劇院、中劇院及小型實驗劇場，共可容納約三千餘人。圖：台中國家歌劇院白天景色 所在位置：台中市西屯區惠來路二段101號
 			</td>
 		</tr>
-		<tr>
-			<td>
+		<tr class="spot">
+			<td class="spot-text">
 				<div class="font3">臺中州廳</div>
 				臺中州廳位於台中市西區，為一座國定古蹟，二戰後由台中市政府遷入辦公，由於該建築原為日治時期的臺中州廳（即「州政府」），因而沿用此稱呼。周邊鄰近台中文學公園、台中刑務所演武場、宮原眼科等熱門景點。圖：臺中州廳所在位置：台中市西區民權路99號
 			</td>
-			<td>
-				<img id="t3" class="round_img2" src='02.jpeg'>
+			<td class="spot-img">
+				<a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/56" target="_blank">
+					<img id="t3" class="round_img2" src='img/02.jpeg'>
+				</a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='03.jpeg'>
+				<a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/1139" target="_blank">
+					<img id="t4" class="round_img2" src='img/03.jpeg'>
+				</a>
 			</td>
 			<td>
 				<div class="font3">審計新村</div>
@@ -99,13 +99,8 @@
 		</tr>
 
 		<tr>
-			<td colspan="2">
-				<iframe src="https://www.google.com/maps/d/embed?mid=1xQXaTVwqDb6_78QNNB_qwmSQVhVlZTQ&ehbc=2E312F" width="1000" height="600"></iframe>
-			</td>
-		</tr>
-		<tr>
 			<td colspan="2" style="background-color: black; color: white">
-				411006592&nbsp;資科三A&nbsp;簡劭達
+				© 2025 簡劭達.&nbsp;隱私權政策&nbsp;使用條款
 			</td>
 		</tr>
 	</table>
