--- a/人文文化/台中歌劇院.html
+++ b/人文文化/台中歌劇院.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>台中歌劇院-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
@@ -121,4 +121,5 @@
 		</tr>
 	</table>
 </body>
+
 </html> 
