--- a/人文文化/台中歌劇院.html
+++ b/人文文化/台中歌劇院.html
@@ -8,42 +8,42 @@
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="../自然景觀/大坑步道.html">大坑步道</a>
+				<a href="../自然景觀/武陵農場.html">武陵農場</a>
+				<a href="../自然景觀/高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="彩虹眷村.html">彩虹眷村</a>
+				<a href="台中歌劇院.html">台中歌劇院</a>
+				<a href="霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="../美食商圈/一中商圈.html">一中商圈</a>
+				<a href="../美食商圈/審計新村.html">審計新村</a>
+				<a href="../美食商圈/第二市場.html">第二市場</a>
+				<a href="../美食商圈/逢甲夜市.html">逢甲夜市</a>
+				<a href="../美食商圈/草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://www.npac-ntt.org/index" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/歌劇院0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/歌劇院0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/歌劇院1.jpg'>
+				<img id="t2" class="round_img2" src='../img/歌劇院1.jpg'>
 			</td>
 			<td>
 				<div class="font3">劇院背景</div>
@@ -77,12 +77,12 @@
 				<div class="font3">外觀造型</div>
                 臺中國家歌劇院造型前衛，以「美聲涵洞」概念，採用曲牆、孔洞與管狀等別具一格的設計，整棟建築完全沒有樑柱支撐，也無一處為90度牆面，顛覆了一般建築物的概念。
 			<td>
-				<img id="t3" class="round_img2" src='/img/歌劇院2.jpg'>
+				<img id="t3" class="round_img2" src='../img/歌劇院2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/歌劇院3.jpg'>
+				<img id="t4" class="round_img2" src='../img/歌劇院3.jpg'>
 			</td>
 			<td>
 				<div class="font3">內部設計</div>
@@ -123,3 +123,4 @@
 </body>
 
 </html> 
+
