--- a/人文文化/霧峰林家花園.html
+++ b/人文文化/霧峰林家花園.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>霧峰林家花園-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="../自然景觀/大坑步道.html">大坑步道</a>
+				<a href="../自然景觀/武陵農場.html">武陵農場</a>
+				<a href="../自然景觀/高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="彩虹眷村.html">彩虹眷村</a>
+				<a href="台中歌劇院.html">台中歌劇院</a>
+				<a href="霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="../美食商圈/一中商圈.html">一中商圈</a>
+				<a href="../美食商圈/審計新村.html">審計新村</a>
+				<a href="../美食商圈/第二市場.html">第二市場</a>
+				<a href="../美食商圈/逢甲夜市.html">逢甲夜市</a>
+				<a href="../美食商圈/草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://www.thelinfamily.org.tw/" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/霧峰0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/霧峰0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/霧峰1.jpg'>
+				<img id="t2" class="round_img2" src='../img/霧峰1.jpg'>
 			</td>
 			<td>
 				<div class="font3">起源</div>
@@ -77,12 +77,12 @@
 				<div class="font3">歷史</div>
                 臺灣閩式官宅代表「宮保第」，1858年興建至1895年完工，十一開間五進深，規模宏大、全台第一。牆面的李鴻章字畫，整體彩繪細緻豐富一匾額一故事，令人眼睛一亮，而細木作部分，變化多端，典雅不俗，材料使用上呈現在地特色，窗花細部刻有蝙蝠、螭龍等傳統吉祥圖案，更增添華麗氣派感。臺灣僅存的福州式戲台建築「大花廳」，1890年興建至1894年左右完工，面寬五開間，明廳與洞窗設計頗富特色，作為宴客和家族聚會看戲等活動用途，是霧峰林家下厝鼎盛的重要象徵。 
 			<td>
-				<img id="t3" class="round_img2" src='/img/霧峰2.jpg'>
+				<img id="t3" class="round_img2" src='../img/霧峰2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/霧峰3.jpg'>
+				<img id="t4" class="round_img2" src='../img/霧峰3.jpg'>
 			</td>
 			<td>
 				<div class="font3">內部空間</div>
@@ -121,4 +121,5 @@
 		</tr>
 	</table>
 </body>
+
 </html> 
