--- a/美食商圈/一中商圈.html
+++ b/美食商圈/一中商圈.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>一中商圈-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="../自然景觀/大坑步道.html">大坑步道</a>
+				<a href="../自然景觀/武陵農場.html">武陵農場</a>
+				<a href="../自然景觀/高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="../人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="../人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="../人文文化/霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="一中商圈.html">一中商圈</a>
+				<a href="審計新村.html">審計新村</a>
+				<a href="第二市場.html">第二市場</a>
+				<a href="逢甲夜市.html">逢甲夜市</a>
+				<a href="草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/400" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/一中0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/一中0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/一中1.jpg'>
+				<img id="t2" class="round_img2" src='../img/一中1.jpg'>
 			</td>
 			<td>
 				<div class="font3">一中介紹</div>
@@ -78,12 +78,12 @@
                 臺中一中街夜市大多以小吃為多，不過也加入了許多年輕學子們喜歡的小店，如飾品店、服飾店等各類配件、還有唱片行、體育用品店與小型精品店等。因為單價不高，再加上很容易找到新潮的流行服飾、配件及個性化商品，因此臺中一中街為成為當地青少年流行文化的資訊來源。在一中街夜市裡各國系列商品專賣店應有盡有，除了各式可愛的布偶娃娃、一些小精品外，還有著櫃子類型在賣專門進口的商品，每一件商品都相當受到年輕女孩子的歡迎。 
 			</td>
 			<td>
-				<img id="t3" class="round_img2" src='/img/一中2.jpg'>
+				<img id="t3" class="round_img2" src='../img/一中2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/一中3.jpg'>
+				<img id="t4" class="round_img2" src='../img/一中3.jpg'>
 			</td>
 			<td>
 				<div class="font3">商圈範圍</div>
@@ -122,4 +122,5 @@
 		</tr>
 	</table>
 </body>
+
 </html> 
