--- a/美食商圈/審計新村.html
+++ b/美食商圈/審計新村.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>審計新村-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="../自然景觀/大坑步道.html">大坑步道</a>
+				<a href="../自然景觀/武陵農場.html">武陵農場</a>
+				<a href="../自然景觀/高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="../人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="../人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="../人文文化/霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="一中商圈.html">一中商圈</a>
+				<a href="審計新村.html">審計新村</a>
+				<a href="第二市場.html">第二市場</a>
+				<a href="逢甲夜市.html">逢甲夜市</a>
+				<a href="草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/1139" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/審計0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/審計0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/審計1.jpg'>
+				<img id="t2" class="round_img2" src='../img/審計1.jpg'>
 			</td>
 			<td>
 				<div class="font3">由來</div>
@@ -78,12 +78,12 @@
                 鄰近馬路卻獨出一格的審計新村，便是在這片將近半世紀歷史的老宿舍，審計新村是臺中市第三批臺灣省政府宿舍群之一 。<br>省府時期審計處的員工眷舍，凍省之後成了閒置空間荒廢多年，面積雖然只有0.52公頃，但所處地點就在臺中勤美綠園道附近，因此更是顯示出審計新村的獨特性，老舊的建築充滿了時代痕跡 。
             </td>
 			<td>
-				<img id="t3" class="round_img2" src='/img/審計2.jpg'>
+				<img id="t3" class="round_img2" src='../img/審計2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/審計3.jpg'>
+				<img id="t4" class="round_img2" src='../img/審計3.jpg'>
 			</td>
 			<td>
 				<div class="font3">政府規劃</div>
@@ -120,4 +120,5 @@
 		</tr>
 	</table>
 </body>
+
 </html> 
