--- a/美食商圈/草悟道.html
+++ b/美食商圈/草悟道.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>草悟道-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="../自然景觀/大坑步道.html">大坑步道</a>
+				<a href="../自然景觀/武陵農場.html">武陵農場</a>
+				<a href="../自然景觀/高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="../人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="../人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="../人文文化/霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="一中商圈.html">一中商圈</a>
+				<a href="審計新村.html">審計新村</a>
+				<a href="第二市場.html">第二市場</a>
+				<a href="逢甲夜市.html">逢甲夜市</a>
+				<a href="草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/786" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/草悟道0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/草悟道0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/草悟道1.jpg'>
+				<img id="t2" class="round_img2" src='../img/草悟道1.jpg'>
 			</td>
 			<td>
 				<div class="font3">介紹</div>
@@ -78,12 +78,12 @@
                 所謂行草，古人解釋為：「 計白當黑，首字領篇 ；左右揮灑，疏密相間；密不通風，寬可跑馬。 」 行草所架構之空間章法，係設計發想的起點，根據行草的律動與韻律，希冀將綠．園．道打造出都會特色空間。因設計上「 行草悟道 」的概念，另有「草悟道」的別稱，英文名稱則定名為「 Calligraphy Greenway 」。 
 			</td>
             <td>
-                <img id="t3" class="round_img2" src='/img/草悟道2.jpg'>
+                <img id="t3" class="round_img2" src='../img/草悟道2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/草悟道3.jpg'>
+				<img id="t4" class="round_img2" src='../img/草悟道3.jpg'>
 			</td>
 			<td>
 				<div class="font3">商圈位置</div>
@@ -111,4 +111,5 @@
 		</tr>
 	</table>
 </body>
+
 </html> 
