--- a/自然景觀/大坑步道.html
+++ b/自然景觀/大坑步道.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>大坑步道-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="大坑步道.html">大坑步道</a>
+				<a href="武陵農場.html">武陵農場</a>
+				<a href="高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="../人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="../人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="../人文文化/霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="../美食商圈/一中商圈.html">一中商圈</a>
+				<a href="../美食商圈/審計新村.html">審計新村</a>
+				<a href="../美食商圈/第二市場.html">第二市場</a>
+				<a href="../美食商圈/逢甲夜市.html">逢甲夜市</a>
+				<a href="../美食商圈/草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://www.scenic.taichung.gov.tw/833845/Nodelist" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/大坑0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/大坑0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -64,7 +64,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/大坑1.jpg'>
+				<img id="t2" class="round_img2" src='../img/大坑1.jpg'>
 			</td>
 			<td>
 				<div class="font3">步道背景</div>
@@ -76,12 +76,12 @@
 				<div class="font3">新手推薦步道</div>
                 [7號步道] - 路程：1.3K7號與6號步道登山口相同，且終點可到達風動石公園（有廁所），旁邊的吳極南海寺可眺望豐原地區的風景 。<br>[6號步道] - 路程：1.5K全程由水泥路與階梯組成，此步道特色便是路程中須經過繩索吊橋，好拍又好玩，終點可到觀音亭小憩後再行下山！</td>
 			<td>
-				<img id="t3" class="round_img2" src='/img/大坑2.jpg'>
+				<img id="t3" class="round_img2" src='../img/大坑2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/大坑3.jpg'>
+				<img id="t4" class="round_img2" src='../img/大坑3.jpg'>
 			</td>
 			<td>
 				<div class="font3">高手推薦步道</div>
@@ -112,4 +112,5 @@
 		</tr>
 	</table>
 </body>
+
 </html>
