--- a/自然景觀/高美濕地.html
+++ b/自然景觀/高美濕地.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>高美濕地-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="大坑步道.html">大坑步道</a>
+				<a href="武陵農場.html">武陵農場</a>
+				<a href="高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="../人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="../人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="../人文文化/霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="../親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="../親子旅遊/麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="../美食商圈/一中商圈.html">一中商圈</a>
+				<a href="../美食商圈/審計新村.html">審計新村</a>
+				<a href="../美食商圈/第二市場.html">第二市場</a>
+				<a href="../美食商圈/逢甲夜市.html">逢甲夜市</a>
+				<a href="../美食商圈/草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://travel.taichung.gov.tw/zh-tw/attractions/intro/54" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/高美0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/高美0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -64,7 +64,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/高美1.jpg'>
+				<img id="t2" class="round_img2" src='../img/高美1.jpg'>
 			</td>
 			<td>
 				<div class="font3">濕地背景</div>
@@ -75,12 +75,12 @@
 				<div class="font3">以前的濕地</div>
                 高美濕地（高美野生動物保護區）的前身為高美海水浴場，隨著臺中港的啟用，高美海水浴場泥沙日漸淤積，導致遊客漸漸稀少，在不得已的情況下，只好宣告關閉，卻也因為泥沙的堆積，造就了今天生態豐富的高美濕地。 			</td>
 			<td>
-				<img id="t3" class="round_img2" src='/img/高美2.jpg'>
+				<img id="t3" class="round_img2" src='../img/高美2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/高美3.jpg'>
+				<img id="t4" class="round_img2" src='../img/高美3.jpg'>
 			</td>
 			<td>
 				<div class="font3">濕地怎麼玩</div>
@@ -111,4 +111,5 @@
 		</tr>
 	</table>
 </body>
+
 </html>
