--- a/親子旅遊/國立自然科學博物館.html
+++ b/親子旅遊/國立自然科學博物館.html
@@ -4,46 +4,46 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>國立自然科學博物館-台中景點推薦</title>
-	<link rel="stylesheet" href="/article.css">
+	<link rel="stylesheet" href="../article.css">
 </head>
 <body>
 	<div class="navbar">
-		<a href="/index.html">首頁</a>
+		<a href="../index.html">首頁</a>
 
 		<div class="dropdown">
 			<a class="dropbtn">自然景觀 ▾</a>
 			<div class="dropdown-content">
-				<a href="/自然景觀/大坑步道.html">大坑步道</a>
-				<a href="/自然景觀/武陵農場.html">武陵農場</a>
-				<a href="/自然景觀/高美濕地.html">高美濕地</a>
+				<a href="../自然景觀/大坑步道.html">大坑步道</a>
+				<a href="../自然景觀/武陵農場.html">武陵農場</a>
+				<a href="../自然景觀/高美濕地.html">高美濕地</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">人文文化 ▾</a>
 			<div class="dropdown-content">
-				<a href="/人文文化/彩虹眷村.html">彩虹眷村</a>
-				<a href="/人文文化/台中歌劇院.html">台中歌劇院</a>
-				<a href="/人文文化/霧峰林家花園.html">霧峰林家花園</a>
+				<a href="../人文文化/彩虹眷村.html">彩虹眷村</a>
+				<a href="../人文文化/台中歌劇院.html">台中歌劇院</a>
+				<a href="../人文文化/霧峰林家花園.html">霧峰林家花園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">親子旅遊 ▾</a>
 			<div class="dropdown-content">
-				<a href="/親子旅遊/國立自然科學博物館.html">國立自然科學博物館</a>
-				<a href="/親子旅遊/麗寶樂園.html">麗寶樂園</a>
+				<a href="國立自然科學博物館.html">國立自然科學博物館</a>
+				<a href="麗寶樂園.html">麗寶樂園</a>
 			</div>
 		</div>
 
 		<div class="dropdown">
 			<a class="dropbtn">美食商圈 ▾</a>
 			<div class="dropdown-content">
-				<a href="/美食商圈/一中商圈.html">一中商圈</a>
-				<a href="/美食商圈/審計新村.html">審計新村</a>
-				<a href="/美食商圈/第二市場.html">第二市場</a>
-				<a href="/美食商圈/逢甲夜市.html">逢甲夜市</a>
-				<a href="/美食商圈/草悟道.html">草悟道</a>
+				<a href="../美食商圈/一中商圈.html">一中商圈</a>
+				<a href="../美食商圈/審計新村.html">審計新村</a>
+				<a href="../美食商圈/第二市場.html">第二市場</a>
+				<a href="../美食商圈/逢甲夜市.html">逢甲夜市</a>
+				<a href="../美食商圈/草悟道.html">草悟道</a>
 			</div>
 		</div>
 	</div>
@@ -54,7 +54,7 @@
 			<td colspan="2">
 				<br><br>
                  <a href="https://www.nmns.edu.tw/ch/" target="_blank">
-				    <img id="t1" class="round_img1" src='/img/科博館0.jpg' width="1024px" height="300px">
+				    <img id="t1" class="round_img1" src='../img/科博館0.jpg' width="1024px" height="300px">
                 </a>
 			</td>
 		</tr>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img id="t2" class="round_img2" src='/img/科博館1.jpg'>
+				<img id="t2" class="round_img2" src='../img/科博館1.jpg'>
 			</td>
 			<td>
 				<div class="font3">科博館介紹</div>
@@ -76,12 +76,12 @@
 			<td>
 				<div class="font3">館內分區</div>
                 國立自然科學博物館簡稱科博館，主要展示區分為六大區塊，包括：太空劇場、科學中心、生命科學廳、地球環境廳、人類文化廳、植物園等。 <br>臺中市霧峰的九二一地震教育園區、南投縣鹿谷鄉的鳳凰谷鳥園、竹山鎮的車籠埔斷層保存園區，也成為科博館館外園區，不僅館內內容豐富且深具教育意義，館外的園區也適合休閒踏青，故歷年來參觀人數平均居全臺博物館第二名，高達三百萬人次左右。 			<td>
-				<img id="t3" class="round_img2" src='/img/科博館2.jpg'>
+				<img id="t3" class="round_img2" src='../img/科博館2.jpg'>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img id="t4" class="round_img2" src='/img/科博館3.jpg'>
+				<img id="t4" class="round_img2" src='../img/科博館3.jpg'>
 			</td>
 			<td>
 				<div class="font3">服務人員</div>
@@ -120,4 +120,5 @@
 		</tr>
 	</table>
 </body>
+
 </html> 
